--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Waldema\\.netbeans\\7.1\\build.properties
+user.properties.file=C:\\Users\\Waldema\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
